--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/location-language-user-settings/location-language-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/location-language-user-settings/location-language-user-settings.component.scss
@@ -35,6 +35,18 @@
     width: calc(50% - 30px);
     // margin-right: 30px;
   }
+  .alert-danger{
+    position: absolute;
+    bottom: -20px;
+    p{
+      font-size: 14px;
+      color: #FF647C;
+      font-family: 'Source Sans Pro';
+      font-style: normal;
+      font-weight: normal;
+      margin: 0;
+    }
+  }
 }
 .field-block-multiple{
   width: 100%;
@@ -161,5 +173,8 @@
     border-radius: 5px;
     border: none;
     width: 100%;
+    &.not_Valid{
+      border: 1px solid #FF647C;
+    }
   }
 }
