--- a/src/app/service-page/components/service-page-checkout/service-page-checkout.component.html
+++ b/src/app/service-page/components/service-page-checkout/service-page-checkout.component.html
@@ -20,81 +20,66 @@
       <h3 class="additional-options__title">Добавить дополнительные опции к услуге?</h3>
       <h4 class="additional-options__name">{{offerData.title}}</h4>
 
-      <form class="extra-features__form" [formGroup]="checkoutExtraFeatures">
+      <form class="extra-features__form" [formGroup]="checkoutForm" >
         <ul class="extra-features__list" [ngClass]="{open: openFeatures}">
           <ng-container *ngFor="let extra_term of offerData.extra_terms">
-            <div class="extra-features__item" *ngIf="extra_term.package == chousenPackage.packageTitle">
-              <mat-checkbox
-              class="extra-features__checkbox"
-              name="extraTerms"
-              [(ngModel)]="checkoutExtraFeatures.extraTerms"
-              #extraTerms="ngModel"
-              >
+            <div class="extra-features__item" *ngIf="extra_term.package == currentPackage">
+              <mat-checkbox class="extra-features__checkbox" formControlName="extraTerms" name="extraTerms">
+                <div class="extra-features__text">
+                  <span class="extra-features__title">Сжатые сроки</span>
+                </div>
               </mat-checkbox>
-              <div class="extra-features__text">
-                <span class="extra-features__title">Сжатые сроки</span>
-
-              </div>
             </div>
           </ng-container>
           <div class="extra-features__item" *ngIf="offerData.extra_changes">
-            <mat-checkbox
-            class="extra-features__checkbox"
-            name="extraСhanges"
-            [(ngModel)]="checkoutExtraFeatures.extraСhanges"
-            #extraСhanges="ngModel"
-            >
-          </mat-checkbox>
-            <div class="extra-features__text">
-              <span class="extra-features__title">Дополнительные правки</span>
-            </div>
+            <mat-checkbox class="example-margin" formControlName="extraChanges" name='extraChanges'>
+              <div class="extra-features__text">
+                <span class="extra-features__title">Дополнительные правки</span>
+              </div>
+            </mat-checkbox>
           </div>
           <div class="extra-features__item" *ngIf="offerData.extra_commercial">
-            <mat-checkbox
-            class="extra-features__checkbox"
-            name="extraCommercial"
-            [(ngModel)]="checkoutExtraFeatures.extraCommercial"
-            #extraCommercial="ngModel">
+            <mat-checkbox class="extra-features__checkbox" formControlName="extraCommercial" name='extraCommercial'>
+              <div class="extra-features__text">
+                <span class="extra-features__title">Коммерческое использование</span>
+              </div>
             </mat-checkbox>
-            <div class="extra-features__text">
-              <span class="extra-features__title">Коммерческое использование</span>
-            </div>
           </div>
 
-          <ng-container *ngFor="let extra_feature of offerData.extra_features">
-            <div class="extra-features__item" *ngIf="extra_feature.published">
-              <mat-checkbox class="extra-features__checkbox" [formControlName]="extra_feature.title">
+          <ng-container *ngFor="let extra_feature of offerData.extra_features; let i = index">
+            <div class="extra-features__item">
+              <mat-checkbox class="extra-features__checkbox" [formControlName]="extra_feature.title" name='extra_feature.titl'>
+                <span class="extra-features__title">{{extra_feature.title}}</span>
               </mat-checkbox>
               <div class="extra-features__text">
-                <span class="extra-features__title">{{extra_feature.title}}</span>
                 <p class="extra-features__description">{{extra_feature.description}}</p>
               </div>
-
             </div>
           </ng-container>
 
         </ul>
+        <div class="btn-checkoutForm" type="submit" (click)='chousenFeatures()'>Посмотреть цену</div>
       </form>
     </div>
   </div>
   <div class="final-services">
     <h3 class="final-services__title">ваш выбор услуги</h3>
     <div class="final-services__top">
-      <h4 class="additional-options__name">{{chousenPackage.packageTitle}}</h4>
+      <h4 class="additional-options__name">{{currentPackage}}</h4>
       <div class="final-price__no-features">
-        <span class="final-price__text">Общая стоимость (без доп. опций)</span><span class="final-price__price">{{offerData[chousenPackage.packageTitle].price}} UAH</span>
+        <span class="final-price__text">Общая стоимость (без доп. опций)</span><span class="final-price__price">{{offerData[currentPackage].price}} UAH</span>
       </div>
     </div>
     <div class="final-services__features">
 
       <div class="changes-term">
-        <span>{{ offerData[chousenPackage.packageTitle].changes }} правок</span>
-        <span>{{ offerData[chousenPackage.packageTitle].term }} дней выполнения</span>
+        <span>{{ offerData[currentPackage].changes }} правок</span>
+        <span>{{ offerData[currentPackage].term }} дней выполнения</span>
       </div>
 
       <ul class="option-list">
         <ng-container *ngFor="let option of offerData.main_options">
-          <li class="active" *ngIf="option[chousenPackage.packageTitle]">{{ option.title }}</li>
+          <li class="active" *ngIf="option[currentPackage]">{{ option.title }}</li>
         </ng-container>
       </ul>
 
@@ -104,22 +89,49 @@
       <div class="extra-features-title">Дополнительные опции</div>
 
       <ul class="option-list">
-        <div class="extra-features__item">
 
-            <span class="extra-features__title">Сжатые сроки</span>
-            <div class="extra-features__price">5000 <span>UAH</span></div>
+        <ng-container *ngFor="let extra_term of offerData.extra_terms">
+          <div class="extra-features__item" *ngIf="extra_term.package == currentPackage">
+            <ng-container *ngIf="extraFeaturesResult[0]">
 
+              <span class="extra-features__title">Сжатые сроки</span>
+              <div class="extra-features__price">{{extra_term.price}} <span>UAH</span></div>
+
+            </ng-container>
+          </div>
+        </ng-container>
+
+        <div class="extra-features__item" *ngIf="extraFeaturesResult[1]">
+          <span class="extra-features__title">Дополнительные правки</span>
+          <div class="extra-features__price">{{offerData.extra_changes.price}} <span>UAH</span></div>
         </div>
-        <div class="extra-features__item">
-
-            <span class="extra-features__title">Сжатые сроки</span>
-            <div class="extra-features__price">5000 <span>UAH</span></div>
-
+        <div class="extra-features__item" *ngIf="extraFeaturesResult[2]">
+          <span class="extra-features__title">Коммерческое использование</span>
+          <div class="extra-features__price">{{offerData.extra_commercial.price}} <span>UAH</span></div>
         </div>
+
+        <ng-container *ngFor="let extra_feature of offerData.extra_features; let i = index">
+          <div class="extra-features__item" *ngIf="extraFeaturesResult[i + 3]">
+            <span class="extra-features__title">{{extra_feature.title}}</span>
+            <div class="extra-features__price">{{extra_feature.price}} <span>UAH</span></div>
+          </div>
+        </ng-container>
       </ul>
 
     </div>
+    <div class="final-services__service-price">
+      <div class="extra-features__item">
+        <span class="extra-features__title">Комиссия за сервис</span>
+        <div class="extra-features__price">{{serviceCommission}} <span>UAH</span></div>
+      </div>
+    </div>
 
+    <div class="final-price">
+      <div class="final-price__wrapper">
+        <span class="final-price__title">конечная стоимость</span>
+        <div class="final-price__price">{{finalSum}} <span>UAH</span></div>
+      </div>
+    </div>
 
   </div>
 </div>
