--- a/src/app/service-page/components/service-page-checkout/service-page-checkout.component.scss
+++ b/src/app/service-page/components/service-page-checkout/service-page-checkout.component.scss
@@ -43,7 +43,7 @@
     }
     &__status{
       color: #FFFFFF;
-      border: 3px solid #fff;
+      border: 2px solid #659AF3;
       line-height: 20px;
       width: 26px;
       height: 26px;
@@ -58,7 +58,6 @@
       text-align: center;
       color: #707683;
       background: #FAFBFC;
-      border: 1px solid #707683;
       box-sizing: border-box;
       box-shadow: 0px 7px 64px rgba(0, 0, 0, 0.07);
       z-index: 2;
@@ -80,6 +79,9 @@
       &.dev{
         background: #659AF3;
         color: #fff;
+      }
+      &.bref{
+        border: 2px solid #707683;
       }
 
     }
@@ -172,7 +174,7 @@
         line-height: 169%;
         color: #707683;
         margin: 0;
-        margin-left: 16px;
+        margin-left: 40px;
       }
 
     }
@@ -184,6 +186,9 @@
   border: 1px solid rgba(220, 224, 230, 0.1);
   box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.2);
   border-radius: 3px;
+  &__wrapper{
+    padding: 0 53px 45px;
+  }
   &__title{
     font-weight: 600;
     font-size: 16px;
@@ -196,7 +201,7 @@
     margin: 0;
   }
   &__top{
-    margin: 27px 53px 20px;
+    margin: 27px 0 20px;
     border-bottom: 1px solid #EBEEFF;
     padding-bottom: 16px;
     .additional-options__name{
@@ -223,12 +228,8 @@
         }
       }
   }
-  .additional-options__name{}
-  .final-price__no-features{
-
-  }
   &__features{
-    margin: 27px 53px 16px;
+    margin: 27px 0 16px;
     border-bottom: 1px solid #EBEEFF;
     padding-bottom: 6px;
     .changes-term {
@@ -302,7 +303,7 @@
     }
   }
   &__extra-features, &__service-price{
-    margin: 0px 53px 16px;
+    margin: 0px 0 16px;
     border-bottom: 1px solid #EBEEFF;
     padding-bottom: 6px;
     .extra-features-title{
@@ -348,32 +349,49 @@
     padding-bottom: 0;
     border-bottom: none;
   }
+  .final-price{
+    margin: 0px 0 16px;
+    color: #29CC97;
+    font-family: 'Source Sans Pro';
+    &__wrapper{
+      display: flex;
+      justify-content: space-between;
+    }
+    &__title{
+      font-weight: normal;
+      font-size: 17px;
+      line-height: 117%;
+      text-transform: uppercase;
+    }
+    &__price{
+      font-weight: bold;
+      font-size: 18px;
+      line-height: 117%;
+    }
+  }
 }
 
-.btn-checkoutForm{
-  background-color: #5d8fff;
-  padding: 10px;
+.btn-ceckout{
+  padding: 16px 25px;
+  font-size: 14px;
+  font-weight: 600;
   width: fit-content;
+  text-transform: uppercase;
+  border-radius: 4px;
+  margin-top: 35px;
+  cursor: pointer;
+}
+.btn-checkoutForm{
+  margin-left: 40px;
+  background: #fff;
+  border: 1px solid #3C7EEA;
+  color: #3C7EEA;
+}
+.btn-accept-ceckout{
+  width: auto;
   color: #fff;
+  text-align: center;
+  background: #3C7EEA;
+  box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
 }
 
-.final-price{
-  margin: 0px 53px 16px;
-  color: #29CC97;
-  font-family: 'Source Sans Pro';
-  &__wrapper{
-    display: flex;
-    justify-content: space-between;
-  }
-  &__title{
-    font-weight: normal;
-    font-size: 17px;
-    line-height: 117%;
-    text-transform: uppercase;
-  }
-  &__price{
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 117%;
-  }
-}
