--- a/src/app/catalog-page/catalog/catalog.component.html
+++ b/src/app/catalog-page/catalog/catalog.component.html
@@ -12,7 +12,7 @@
   </div>
   <h2 class="category-title" *ngIf="offersList">{{ offersList.name }}</h2>
   <app-filter [catalogFilters]="catalogFilters"></app-filter>
-  <app-items (outToParent)='receiveFromChild($event)'></app-items>
+  <app-items></app-items>
   <app-catalog-pagination [catalogFilters]="catalogFilters"></app-catalog-pagination>
 
 
