--- a/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.html
+++ b/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.html
@@ -17,9 +17,9 @@
       </ng-container>
 
       <div class="actions" [ngClass]="{ btwn: dealCencel }">
-        <button *ngIf="!isUserFreelancer && messageClass === 'breef' && collocutorData.moneyHolded !== 1" class="btn" (click)="holdMoneynDeal()">Зарезирвировать оплату</button>
+        <!-- <button *ngIf="!isUserFreelancer && messageClass === 'breef' && collocutorData.moneyHolded !== 1" class="btn" (click)="holdMoneynDeal()">Зарезирвировать оплату</button>
 
-        <button *ngIf="isUserFreelancer && messageClass === 'hold-money' && collocutorData.workStarted !==1" class="btn" (click)="goToWork()">уведометь о начале работы</button>
+        <button *ngIf="isUserFreelancer && messageClass === 'hold-money' && collocutorData.workStarted !==1" class="btn" (click)="goToWork()">уведометь о начале работы</button> -->
 
         <!-- deal canceling  -->
 
