--- a/src/app/chat/components/messager-tools/messager-tools.component.html
+++ b/src/app/chat/components/messager-tools/messager-tools.component.html
@@ -1,8 +1,8 @@
 <div class="inform" *ngIf="deal">
-  <div class="tools" *ngIf="deal.moneyHolded !==0">
+  <div class="tools">
     <h6>Действия</h6>
-
-    <button (click)="cencelWork()">отменить работу</button>
+    <button *ngIf="!isUserFreelancer  && collocutorData.moneyHolded !== 1" class="btn" (click)="holdMoneynDeal()">Зарезирвировать оплату</button>
+    <button (click)="cencelWork()" *ngIf="collocutorData.moneyHolded == 1" >отменить работу</button>
     <!-- <button>обратиться в арбитраж</button> -->
     <button *ngIf="isUserFreelancer" (click)="finishWork()">Завершить работу</button>
   </div>
